UIREC-338: fix title spacing issue (#505)

--- a/src/TitleDetails/TitleDetails.css
+++ b/src/TitleDetails/TitleDetails.css
@@ -1,4 +1,9 @@
 .accordion-actions {
   display: flex;
   gap: 1rem;
-};
+}
+
+.divider {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
